Add support for content add if it doesn't exists on update
