# src/CSharp/EasyMicroservices.ContentsMicroservice.WebApi/Controllers/ContentController.cs
@@ -126,8 +126,9 @@ namespace EasyMicroservices.QuestionsMicroservice.WebApi.Controllers
 
                             if (!response.IsSuccess)
                                 return (FailedReasonType.Unknown, "An error has occured");
-
                         }
+
+
                     }
 
                     return true;
@@ -137,6 +138,59 @@ namespace EasyMicroservices.QuestionsMicroservice.WebApi.Controllers
             return (FailedReasonType.Incorrect, $"{getCategoryResult.Result.Key} category doesn't exists");
         }
 
+        [HttpPost]
+        public async Task<MessageContract> UpdateeContentWithKey(AddContentWithKeyRequestContract request)
+        {
+            var getCategoryResult = await _categorylogic.GetBy(x => x.Key == request.Key, query => query.Include(x => x.Contents).ThenInclude(x => x.Language));
+            if (getCategoryResult.IsSuccess)
+            {
+                var contents = getCategoryResult.Result.Contents;
+                foreach (var content in contents)
+                {
+                    if (request.LanguageData.Any(o => o.Language == content.Language.Name))
+                    {
+                        var response = await _contractlogic.Update(new UpdateContentRequestContract
+                        {
+                            Id = content.Id,
+                            CategoryId = content.CategoryId,
+                            LanguageId = content.LanguageId,
+                            UniqueIdentity = content.UniqueIdentity,
 
+                            Data = request.LanguageData.FirstOrDefault(o => o.Language == content.Language.Name).Data
+                        });
+
+                        if (!response.IsSuccess)
+                            return (FailedReasonType.Unknown, "An error has occured");
+                    }
+                }
+
+                foreach (var languageData in request.LanguageData)
+                {
+                    if (!contents.Any(o => o.Language.Name == languageData.Language))
+                    {
+                        var language = await _languagelogic.GetBy(o => o.Name == languageData.Language);
+
+                        if (!language)
+                            continue;
+
+                        var response = await _contractlogic.Add(new CreateContentRequestContract
+                        {
+                            CategoryId = getCategoryResult.Result.Id,
+                            LanguageId = language.Result.Id,
+                            UniqueIdentity = language.Result.UniqueIdentity,
+
+                            Data = languageData.Data
+                        });
+
+                        if (!response.IsSuccess)
+                            return (FailedReasonType.Unknown, "An error has occured");
+                    }
+                }
+
+                return true;
+            }
+
+            return (FailedReasonType.Incorrect, $"{getCategoryResult.Result.Key} category doesn't exists");
+        }
     }
 }
